--- a/TODO
+++ b/TODO
@@ -44,8 +44,10 @@ ignoreEvents -> enableEvents
 SQL
     subset / prepare cache
     escaping
-    many/one/exec
+    many/one/run
+    async
 
+https://i.imgur.com/sCCrrgW.png
 
 // tick|message|webhook.name
 // print|command|eval|join|part|nick|acquire
@@ -56,9 +58,10 @@ SQL
 memo / SQL
 ===
 
-async SQL
-
 a way of clearing the db
+01:00 <@cake^> ~> while(1) SQL.run`INSERT INTO foo (message) VALUES (1)`
+01:00 <@cake^> ~> while(1) fetchSync('https://google.com')
+timeout ref
 
 IRC.sudo().setNamespace('namespace')
 IRC.setNamespace('event');
