--- a/TODO
+++ b/TODO
@@ -3,28 +3,27 @@ repl: rs|clojure|vlang|cj|scheme|jsx|html
 
 DOC / CMDS
 ===
-clean up TODO
 use a better password
+when updating
+    get commands
+    make a v3-final branch
 update config
-    autorejoin code
+    autorejoin 8bitvape
     memo
-changelog
+update example config
 update guide
     storage moved to
 
-actual docs / changelog
-
-
 colLimit charLimit lineLimit
 reloadable config
-web can be disabled
-remove old events
 IRC.listen filter showError
 syntax errors
 removal of dateFns and _
 IRC.sudo().node.events.reloadVM.call();
 IRC.sudo().node.parent.reloadEvents.call();
 IRC.sudo().node.parent.reloadVM.call();
+setDebug / internal API / admin commands
+
 const dateFns = require('date-fns@1.30.1');
 const _ = require('lodash');
 removed channels and commandLimit
@@ -41,7 +40,6 @@ fetch
 event.fetchURL
 webhooks
     queryparams / body
-setDebug / internal API / admin commands
 ignoreEvents -> enableEvents
 SQL
     subset / prepare cache
@@ -62,6 +60,10 @@ https://i.imgur.com/sCCrrgW.png
 
 memo / SQL
 ===
+    for debug: show query time
+migration
+
+    have a query that takes longer than a second
 
     // for memo, the connection will always be open ^_^
 memo: more than line limit memos
