--- a/TODO
+++ b/TODO
@@ -10,13 +10,12 @@ when updating
 update config
     autorejoin 8bitvape
     memo / remind
+    enableMemo / enableRemind
 update guide
     storage moved to
     const dateFns = require('date-fns@1.30.1');
     const _ = require('lodash');
     rm -rm cache/acquire
-
-    remind
 
     mark log with isSelf
     log limit 1 month
@@ -30,7 +29,6 @@ migration
 // IP Address leak
 
 IRC.require() in events allows whitelisting stuff for others
-say egg everyday in eggchan
 
 14:07 <+cake^> I should make CuteServ autoreply with the colour of a hex value
 CuteServ: question?
