--- a/TODO
+++ b/TODO
@@ -1,40 +1,35 @@
 sudo: debug|reboot|reload|update|join|part|mode|topic|kick|nick|msg|redirect|ignore
 repl: rs|clojure|vlang|cj|scheme|jsx|html
 
-DOC / CMDS
-===
-use a better password
-when updating
-    get commands
-    make a v3-final branch
-    merge PR
-update config
-    memo / remind
-    enableMemo / enableRemind opt in
+migrate cuteserv data
 
+14:02 <j`ey> ~> store.set("letters",1); print("store.get( " + store.get("letters") + ")"); store.set("letters",10); print("store.get( " + store.get("letters") + ")")
+14:02 <kawaii> store.get( 1)
+14:02 <kawaii> store.get( 1)
+14:02 <kawaii> undefined
 
-migration
+writes happening at the right time
+db.pragma('synchronous = FULL')
 
-// happy new year
-// s/thing/thing
-// IP Address leak
+exit() should call the graceful shutdown (send sigint)
+process.kill(process.pid, "SIGINT");
+
+redo / fix stats
+remind pms not working
+    remind.pending
+<s>dont resolve URLs from self</s>bcz apis
+09:10 <eyeoh> https://twitter.com/Kiwiseabreeze/status/1491861303723696129
+09:10 <kawaii> Rochelle F @Kiwiseabreeze For those government usability folks out there :
+
+wordle
+hex-to-color-name
+redditvideourl
 
 IRC.require() in events allows whitelisting stuff for others
 
-14:07 <+cake^> I should make CuteServ autoreply with the colour of a hex value
-CuteServ: question?
-
-IRC.listen('tick', () => {
-    print('the time is ' + new Date);
-}, { filter: ({ channel }) => channel === '#8bitvape'});
-
-IRC.listen('command', (event) => {
-    if (command.root === 'ginger') {
-        e.preventDefault();
-    }
-});
-
 ---------
+
+select * from sqlite_schema
 
 isSelf migration:
 PRAGMA table_info(foo_table_name)
